Fix errors in control checked

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.carousel-items . div {
+.carousel-items > div {
   display: none;
 
 }
@@ -6,7 +6,7 @@
 #arsinoitherium-control:checked ~ .carousel-inner #arsinoitherium,
 #elasmotherium-control:checked ~ .carousel-inner #elasmotherium,
 #glyptodon-control:checked ~ .carousel-inner #glyptodon,
-#megatherium-control:checked ~ .carousel-inner #megatherium, {
+#megatherium-control:checked ~ .carousel-inner #megatherium {
   display: block;
 }
 
@@ -18,6 +18,6 @@
 #arsinoitherium-control:checked ~ .carousel-inner [for="arsinoitherium-control"],
 #elasmotherium-control:checked ~ .carousel-inner [for="elasmotherium-control"],
 #glyptodon-control:checked ~ .carousel-inner [for="glyptodon-control"],
-#megatherium-control:checked ~ .carousel-inner [for="megatherium"] {
+#megatherium-control:checked ~ .carousel-inner [for="megatherium-control"] {
   background-color: #fff;
 }
